@@ -1,4 +1,12 @@
 NEXT VERSION
+  - VESA BIOS will remove 8-bit bank switching limit if the video memory
+    is large enough to need more than 256 banks. Memory size will always
+    be limited to no more than 64 banks (128 if smaller than 64KB
+    granularity) only if S3 emulation is active. DOSBox Integrated Graphics
+    machine type is exempt from bank switching limit, so, if you are running
+    legacy code or Demoscene stuff against it that never clears the upper
+    8 bits properly, it's not going to work unless you use smaller memsize
+    settings. (joncampbell123).
   - Update BOOT command to support multiple disk images with swapping (maron2000).
   - Render scaler system has been modified so that render and frame caches
     are now dynamically allocated, instead of fixed buffers. Not only does
